# final_project_Tsurkan

./: README.md  ml_quality_monitor.db  pyproject.toml  pytest.ini  requirements.txt
docs/: RUN.md  TZ.md
examples/: send_demo_data.py
src/ml_quality_monitor/: __init__.py  __main__.py  aggregator.py  alerts.py  app.py  config.py  metrics.py  models.py  storage.py  worker.py
src/ml_quality_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_alerts.py  test_api.py  test_metrics.py  test_service.py
