[project]
name = "ml-quality-monitor"
version = "1.0.0"
description = "Rolling ML quality monitoring service with reliable alert delivery"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.11.0",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]

[tool.setuptools.packages.find]
where = ["src"]
